Refactor node-repository filters